--- a/index.html
+++ b/index.html
@@ -49,7 +49,254 @@
             width: 50px;
             height: 50px;
             margin: 10px;
-            background-color: green
+            background-color: rgb(62, 182, 26);
+            border: 4px solid black;
+            border-radius: 0 50% 50% 50%;
+
+        }
+
+        #f {
+            width: 50px;
+            height: 50px;
+            margin: 10px;
+            background-color: rgb(245, 241, 34);
+            border: 4px solid black;
+            border-radius: 0 50% 0 50%;
+        }
+
+        #g {
+            width: 50px;
+            height: 50px;
+            background-color: white;
+            margin: 10px;
+            border: 4px solid black;
+            position: relative
+        }
+
+        #g .box {
+            width: 30px;
+            height: 10px;
+            background-color: black;
+            transform: translate(10px, 10px)
+        }
+
+        #h {
+            width: 50px;
+            height: 50px;
+            background-color: rgb(30, 66, 184);
+            margin: 10px;
+            border: 4px solid black;
+            position: relative;
+
+        }
+
+        #h .box1 {
+            width: 30px;
+            height: 10px;
+            background-color: rgb(245, 228, 0);
+            transform: translate(10px, 10px);
+        }
+
+        #h .box2 {
+            width: 30px;
+            height: 10px;
+            background-color: rgb(245, 228, 0);
+            transform: translate(10px, 20px)
+        }
+
+        #i {
+            width: 50px;
+            height: 50px;
+            background-color: rgb(216, 0, 0);
+            margin: 10px;
+            border: 4px solid black;
+            position: relative;
+
+        }
+
+        #i .plus {
+            width: 30px;
+            height: 10px;
+            background-color: rgb(255, 255, 255);
+            position: absolute;
+            transform: translate(10px, 20px)
+        }
+
+        #i .plus2 {
+            width: 10px;
+            height: 30px;
+            background-color: rgb(255, 255, 255);
+            position: absolute;
+            transform: translate(20px, 10px)
+        }
+
+        #j {
+            width: 50px;
+            height: 50px;
+            background-color: white;
+            margin: 10px;
+            border: 4px solid black;
+            position: relative;
+
+        }
+
+        #j .x1 {
+            width: 30px;
+            height: 8px;
+            background-color: black;
+            position: absolute;
+            transform: translate(11px, 22px) rotate(-45deg)
+        }
+
+        #j .x2 {
+            width: 30px;
+            height: 8px;
+            background-color: black;
+            position: absolute;
+            transform: translate(11px, 22px) rotate(45deg)
+        }
+
+        #k {
+            width: 50px;
+            height: 50px;
+            background-color: white;
+            margin: 10px;
+            border: 4px solid black;
+            border-radius: 50%;
+            position: relative
+        }
+
+        #k .ox {
+            width: 30px;
+            height: 10px;
+            background-color: black;
+            position: absolute;
+            transform: translate(10px, 20px) rotate(-45deg);
+        }
+
+        #k .ox1 {
+            width: 30px;
+            height: 10px;
+            background-color: black;
+            position: absolute;
+            transform: translate(10px, 20px) rotate(45deg)
+        }
+
+        #l {
+            width: 50px;
+            height: 50px;
+            background-color: white;
+            margin: 10px;
+            border: 4px solid black;
+            border-radius: 50%;
+            position: relative
+        }
+
+        #l .lo {
+            width: 26px;
+            height: 4px;
+            background-color: black;
+            position: absolute;
+            transform: translate(10px, 23px)
+        }
+
+        #l .lo1 {
+            width: 20px;
+            height: 4px;
+            background-color: black;
+            position: absolute;
+            transform: translate(22px, 17px) rotate(45deg)
+        }
+
+        #l .lo2 {
+            width: 20px;
+            height: 4px;
+            background-color: black;
+            position: absolute;
+            transform: translate(22px, 29px) rotate(-45deg)
+        }
+
+        #m {
+            width: 50px;
+            height: 50px;
+            background-color: rgb(180, 196, 209);
+            margin: 10px;
+            border: 4px solid black;
+            position: relative;
+        }
+
+        #m .m1 {
+            width: 8px;
+            height: 8px;
+            background-color: rgb(255, 0, 0);
+            border: 4px solid black;
+            border-radius: 50%;
+            position: absolute;
+            transform: translate(8px, 8px)
+        }
+
+        #m .m2 {
+            width: 8px;
+            height: 8px;
+            background-color: rgb(255, 0, 0);
+            border: 4px solid black;
+            border-radius: 50%;
+            position: absolute;
+            transform: translate(28px, 8px)
+        }
+
+        #m .m3 {
+            width: 28px;
+            height: 4px;
+            background-color: rgb(255, 0, 0);
+            border: 4px solid black;
+            border-radius: 5px;
+            position: absolute;
+            transform: translate(8px, 30px)
+        }
+
+        #n {
+            width: 50px;
+            height: 50px;
+            background-color: white;
+            margin: 10px;
+            border: 4px solid black;
+            position: relative;
+            border-radius: 12px 12px 18px 18px
+        }
+
+        #n .n1 {
+            width: 8px;
+            height: 8px;
+            background-color: white;
+            border: 4px solid black;
+            border-radius: 0 50% 50% 50%;
+            position: absolute;
+            transform: translate(8px, 8px);
+        }
+
+
+
+        #n .n3 {
+            width: 8px;
+            height: 8px;
+            background-color: white;
+            border: 4px solid black;
+            border-radius: 50% 0 50% 50%;
+            position: absolute;
+            transform: translate(28px, 8px)
+        }
+
+
+        #n .n5 {
+            width: 16px;
+            height: 0px;
+            border-top: 3px solid black;
+            border-left: 6px solid black;
+            border-right: 6px solid black;
+            border-bottom: 6px solid transparent;
+            position: absolute;
+            transform: translate(12px, 32px);
         }
     </style>
 
@@ -62,6 +309,46 @@
         <div id="c"></div>
         <div id="d"></div>
         <div id="e"></div>
+        <div id="f"></div>
+        <div id="g">
+            <div class="box"></div>
+        </div>
+        <div id="h">
+            <div class="box1"></div>
+            <div class="box2"></div>
+        </div>
+
+        <div id="i">
+            <div class="plus"></div>
+            <div class="plus2"></div>
+        </div>
+        <div id="j">
+            <div class="x1"></div>
+            <div class="x2"></div>
+        </div>
+        <div id="k">
+            <div class="ox"></div>
+            <div class="ox1"></div>
+        </div>
+        <div id="l">
+            <div class="lo"></div>
+            <div class="lo1"></div>
+            <div class="lo2"></div>
+        </div>
+        <div id="m">
+            <div class="m1"></div>
+            <div class="m2"></div>
+            <div class="m3"></div>
+        </div>
+
+        <div id="n">
+            <div class="n1"></div>
+            <div class="n2"></div>
+            <div class="n3"></div>
+            <div class="n4"></div>
+            <div class="n5"></div>
+            <div class="n6"></div>
+        </div>
     </div>
 </body>
 
