--- a/index.html
+++ b/index.html
@@ -298,6 +298,153 @@
             position: absolute;
             transform: translate(12px, 32px);
         }
+
+        #o {
+            width: 50px;
+            height: 50px;
+            background-color: rgb(200, 230, 255);
+            margin: 10px;
+            border: 4px solid black;
+            position: relative;
+        }
+
+        #o .o1 {
+            width: 30px;
+            height: 30px;
+            background-color: rgb(59, 90, 126);
+            border-radius: 50% 50% 50% 0;
+            position: absolute;
+            transform: translate(12px, 18px);
+        }
+
+        #o .o2 {
+            width: 20px;
+            height: 20px;
+            background-color: rgb(66, 102, 143);
+            border-radius: 50% 50% 50% 0;
+            position: absolute;
+            border-right: 1px solid;
+            transform: translate(18px, 23px);
+        }
+
+        #o .o3 {
+            width: 14px;
+            height: 14px;
+            background-color: rgb(59, 90, 126);
+            border-radius: 50% 0 50% 50%;
+            position: absolute;
+            transform: translate(28px, 6px) rotate(45deg);
+
+        }
+
+        #o .o4 {
+            width: 3px;
+            height: 3px;
+            background-color: white;
+            border-radius: 50%;
+            transform: translate(35px, 8px)
+        }
+
+        #p {
+            width: 50px;
+            height: 50px;
+            background-color: rgb(193, 238, 255);
+            margin: 10px;
+            border: 4px solid black;
+            position: relative
+        }
+
+        #p .p1 {
+            width: 14px;
+            height: 10px;
+            background-color: rgb(250, 95, 95);
+            border-radius: 50%;
+            position: absolute;
+            transform: translate(10px, 36px) rotate(-20deg);
+
+        }
+
+        #p .p2 {
+            width: 30px;
+            height: 30px;
+            background-color: rgb(255, 146, 146);
+            border-radius: 50%;
+            position: absolute;
+            transform: translate(10px, 14px)
+        }
+
+        #p .p3 {
+            width: 14px;
+            height: 10px;
+            background-color: rgb(250, 95, 95);
+            border-radius: 50%;
+            position: absolute;
+            transform: translate(26px, 36px)
+        }
+
+
+        #p .p4 {
+            width: 14px;
+            height: 10px;
+            background-color: rgb(250, 95, 95);
+            border-radius: 50%;
+            position: absolute;
+            transform: translate(26px, 36px)
+        }
+
+        #p .p5 {
+            width: 5px;
+            height: 7px;
+            background-color: rgb(255, 146, 146);
+            border-radius: 50%;
+            border-right: 1px solid black;
+            position: absolute;
+            transform: translate(10px, 26px)
+        }
+
+        #p .p6 {
+            width: 5px;
+            height: 5px;
+            background-color: rgb(255, 146, 146);
+            border-radius: 50%;
+            border-left: 1px solid black;
+            position: absolute;
+            transform: translate(34px, 26px)
+        }
+
+        #p .p7 {
+            width: 2px;
+            height: 5px;
+            background-color: black;
+            position: absolute;
+            transform: translate(18px, 16px)
+        }
+
+        #p .p8 {
+            width: 2px;
+            height: 5px;
+            background-color: black;
+            position: absolute;
+            transform: translate(28px, 16px)
+        }
+
+        #p .p9 {
+            width: 14px;
+            height: 11px;
+            background-color: rgb(182, 55, 55);
+            border-radius: 50%;
+            position: absolute;
+            transform: translate(18px, 20px)
+        }
+
+        #p .p9 {
+            width: 6px;
+            height: 4px;
+            background-color: rgb(231, 112, 112);
+            border-radius: 50%;
+            position: absolute;
+            transform: translate(5px, 7px)
+        }
     </style>
 
 </head>
@@ -349,7 +496,27 @@
             <div class="n5"></div>
             <div class="n6"></div>
         </div>
+
+        <div id="o">
+            <div class="o1"></div>
+            <div class="o2"></div>
+            <div class="o3"></div>
+            <div class="o4"></div>
+        </div>
+
+        <div id="p">
+            <div class="p1"></div>
+            <div class="p2"></div>
+            <div class="p3"></div>
+            <div class="p4"></div>
+            <div class="p5"></div>
+            <div class="p6"></div>
+            <div class="p7"></div>
+            <div class="p8"></div>
+
+        </div>
     </div>
+
 </body>
 
 </html>
